Added comments, deleted unnecessary blocks

--- a/notebooks/sho_docbook.ipynb
+++ b/notebooks/sho_docbook.ipynb
@@ -8,11 +8,6 @@
   {
    "cells": [
     {
-     "cell_type": "raw",
-     "metadata": {},
-     "source": []
-    },
-    {
      "cell_type": "heading",
      "level": 3,
      "metadata": {},
@@ -25,7 +20,6 @@
      "collapsed": false,
      "input": [
       "from bs4 import BeautifulSoup\n",
-      "import nltk\n",
       "import pandas as pd\n",
       "\n",
       "ORIGINAL_DIRECTORY = '/Users/shoheinarron/Desktop/'\n",
@@ -113,6 +107,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "# split strings for further cleaning\n",
       "x = [string for string in soup.stripped_strings]\n",
       "proper_list = []\n",
       "for i in x:\n",
@@ -121,6 +116,8 @@
       "            proper_list.append(q)\n",
       "proper_list = ' '.join(proper_list)\n",
       "#print proper_list\n",
+      "\n",
+      "# split up cleaned list for a cleaner split\n",
       "broken_list = proper_list.split(' ')"
      ],
      "language": "python",
@@ -132,20 +129,27 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "# Regex party!\n",
+      "# Feel free to add, subtract, and edit patterns for better results.\n",
+      "\n",
       "from collections import Counter\n",
-      "from nltk.corpus import stopwords\n",
       "\n",
       "i = 0\n",
       "in_text_list = []\n",
       "while i < len(broken_list):\n",
-      "    if (len(broken_list[i]) > 5) and ('_' not in broken_list[i]): #and (broken_list[i+1] not in stopwords.words('English')):\n",
+      "    if (len(broken_list[i]) > 5) and ('_' not in broken_list[i]):\n",
+      "        # pick up -ize or -ise, but not -wise\n",
       "        if (re.match(\"[A-z]+ize$\", broken_list[i]) or (re.match(\"[A-z]+ise$\", broken_list[i]) and (broken_list[i] != \"wise\"))):\n",
       "            in_text_list.append(broken_list[i].lower())\n",
+      "        # pick up -ity\n",
       "        elif (re.match(\"[A-z]+ity$\", broken_list[i])):\n",
       "            in_text_list.append(broken_list[i].lower())\n",
+      "        # pick up two or more words with capital letters at the beginning of each word.\n",
       "        elif (re.match(\"^[A-Z][A-Za-z]+$\", broken_list[i])) and (re.match(\"^[A-Z][a-z]+$\", broken_list[i+1])) and i+1 < len(broken_list):\n",
+      "            # pick up three\n",
       "            if (re.match(\"^[A-Z][A-Za-z]+$\", broken_list[i+2])) and i+2 < len(broken_list):\n",
       "                in_text_list.append(broken_list[i] + ' ' + broken_list[i+1] + ' ' + broken_list[i+2])\n",
+      "            # pick up two\n",
       "            else:\n",
       "                in_text_list.append(broken_list[i] + ' ' + broken_list[i+1])\n",
       "        else:\n",
@@ -166,6 +170,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "# Check to see in_text_list_series is working\n",
       "i = 0\n",
       "while i < len(in_text_list_series):\n",
       "    print in_text_list_series[i:i+50]\n",
@@ -314,27 +319,6 @@
       }
      ],
      "prompt_number": 54
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "# This doesn't work. Just for testing purposes.\n",
-      "for i in results:\n",
-      "    if (len(i[0]) > 5) and ('_' not in i[0]):\n",
-      "        if ((i[0][-3:] == \"ize\") or ((i[0][-3:] == \"ise\") and (i[0][-4:] != \"wise\"))):\n",
-      "            #print i[0].lower()\n",
-      "            pass\n",
-      "        elif (i[0][-3:] == \"ity\"):\n",
-      "            #print i[0].lower()\n",
-      "            pass\n",
-      "        else:\n",
-      "            pass"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 221
     },
     {
      "cell_type": "heading",
