Lemmatized query terms

--- a/notebooks/sho_docbook.ipynb
+++ b/notebooks/sho_docbook.ipynb
@@ -21,6 +21,7 @@
      "input": [
       "from bs4 import BeautifulSoup\n",
       "import pandas as pd\n",
+      "import nltk\n",
       "\n",
       "ORIGINAL_DIRECTORY = '/Users/shoheinarron/Desktop/'\n",
       "PATH = 'Chapter1.xml'\n",
@@ -129,6 +130,144 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "#brown_corpus = nltk.corpus.brown.tagged_words()\n",
+      "tagged_sentence = nltk.pos_tag(broken_list)\n",
+      "#print tagged_sentence"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 6
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "nouns = [item[0] for item in tagged_sentence if (item[1]=='NN' or item[1]=='NNS' or item[1]=='NNP')]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 11
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "pos = ['NN', 'NNP', 'NNS', 'NNPS']\n",
+      "#pos = ['NNPS']\n",
+      "from itertools import islice\n",
+      "\n",
+      "\n",
+      "term_list = []\n",
+      "\n",
+      "chain = []\n",
+      "for item in islice(tagged_sentence,None):\n",
+      "    \n",
+      "    if item[1] in pos:\n",
+      "        chain.append(item)\n",
+      "      \n",
+      "    else:\n",
+      "        \n",
+      "        if len(chain) > 0:\n",
+      "            term_list.append(\" \".join([item[0] for item in chain]))\n",
+      "            chain = []\n",
+      "    \n",
+      "#print term_list"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 7
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "pos = ['NN', 'NNP', 'NNS', 'NNPS']\n",
+      "#pos = ['NNPS']\n",
+      "from itertools import islice\n",
+      "\n",
+      "i = 0\n",
+      "term_list = []\n",
+      "temp_list = []\n",
+      "\n",
+      "while i < len(tagged_sentence)-1:\n",
+      "    \n",
+      "    if item[i][1] in pos:\n",
+      "        if item[i+1][1] in pos:\n",
+      "            if item[i+2][1] in pos:\n",
+      "                temp_list.append(item[i+3][0])\n",
+      "            else:\n",
+      "                pass\n",
+      "        temp_list.append(item[i:i+2][0])\n",
+      "        else:\n",
+      "            pass\n",
+      "    temp_list.append(item)\n",
+      "    else:\n",
+      "        pass\n",
+      "    \n",
+      "    term_list.append(temp_list)\n",
+      "    temp_list = []\n",
+      "    i += 1"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "ename": "SyntaxError",
+       "evalue": "invalid syntax (<ipython-input-9-305422faafe9>, line 18)",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-9-305422faafe9>\"\u001b[0;36m, line \u001b[0;32m18\u001b[0m\n\u001b[0;31m    else:\u001b[0m\n\u001b[0m       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+       ]
+      }
+     ],
+     "prompt_number": 9
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "#[item[0] for item in tagged_sentence if (item[1]=='NN' or item[1]=='NP' or item[1]=='NNP')]\n",
+      "i = 0\n",
+      "in_text_list = []\n",
+      "while i < len(tagged_sentence):\n",
+      "    if (len(tagged_sentence[i][0]) > 5) and ('_' not in tagged_sentence[i][0]):\n",
+      "        if (tagged_sentence[i][1]=='NN') or (tagged_sentence[i][1]=='NP') or (tagged_sentence[i][1]=='NNP'):\n",
+      "            print broken_list[i].lower()\n",
+      "        elif (re.match(\"[A-z]+ity$\", broken_list[i])):\n",
+      "            print broken_list[i].lower()\n",
+      "        elif (re.match(\"^[A-Z][A-Za-z]+$\", broken_list[i])) and (re.match(\"^[A-Z][a-z]+$\", broken_list[i+1])) and i+1 < len(broken_list):\n",
+      "            if (re.match(\"^[A-Z][A-Za-z]+$\", broken_list[i+2])) and i+2 < len(broken_list):\n",
+      "                print broken_list[i] + ' ' + broken_list[i+1] + ' ' + broken_list[i+2]\n",
+      "            else:\n",
+      "                print broken_list[i] + ' ' + broken_list[i+1]\n",
+      "        else:\n",
+      "            pass\n",
+      "        i += 1\n",
+      "    else:\n",
+      "        i += 1"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "ename": "KeyboardInterrupt",
+       "evalue": "",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+        "\u001b[0;32m<ipython-input-10-36a9fa4dcce9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#[item[0] for item in tagged_sentence if (item[1]=='NN' or item[1]=='NP' or item[1]=='NNP')]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mi\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mwhile\u001b[0m \u001b[0mi\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtagged_sentence\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0;32mpass\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+        "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+       ]
+      }
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
       "# Regex party!\n",
       "# Feel free to add, subtract, and edit patterns for better results.\n",
       "\n",
@@ -159,7 +298,7 @@
       "        i += 1\n",
       "\n",
       "in_text_counter = Counter(in_text_list)\n",
-      "in_text_list_series = pd.Series(in_text_counter, index=list(in_text_counter))\n"
+      "in_text_list_series = pd.Series(in_text_counter, index=list(in_text_counter))"
      ],
      "language": "python",
      "metadata": {},
