--- a/notebooks/DocBookParse.ipynb
+++ b/notebooks/DocBookParse.ipynb
@@ -11,7 +11,15 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "<h2>Dr. Book</h2>\n",
+      "<h2>Dr. Book - Linking a Book to Open Data Sources</h2>\n",
+      "<h3>Abstarct:</h3>\n",
+      "<p>For any text-based resource, we will extract people, places, topics and concepts to render a webpage linking these resources to Open Data resources. We can parse books authored using the Docbook XML structure (http://docbook.org/tdg51/en/html/), which would provide more accuracy and relevance.</p>"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
       "<h3>Original Idea:</h3>\n",
       "<p>Two of our team members had been involved in Prof. Glushko's <i><a href=\"http://www.ischool.berkeley.edu/courses/i290-feb\">Future of eBooks</a></i> seminar in which students contributed to creating an <a href=\"www.futurepress.org\">open eBook reader</a>. We believed that books should be platform-independent and plugin-extensible.</p>\n",
       "<p>Our team decided to work on a project that would augment the reading experience by adding semantic web-like links that would connect information within books to the Web.</p>"
